# PROTON

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  hardware.md
proton/Hardware/Detectors/geiger_counts/: link.py  readout.py  record_geiger_counts.py
proton/common/: __init__.py  data_handler.py  exceptions.py  recording.py
proton/default_data/geiger_counts/: gc01_background_room.csv
tests/: conftest.py
tests/Hardware/Detectors/geiger_counts/: test_readout.py
tests/Hardware/Detectors/geiger_pulses/: tester.py
tests/Hardware/Detectors/geiger_serial/: test_config.py
tests/common/: test_data_handler.py  test_exceptions.py  test_recording.py
