[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proton"
version = "0.0.1"
description = "Physics-informed Radiation Operator and Time-series Optimized Network"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",]
test = ["pytest"]

[tool.setuptools.packages.find]
# This is to pick up proton and every subpackage under it
include = ["proton*"]

[tool.pytest.ini_options]
testpaths = ["tests"]